Updated outstanding issues with file loader
Fixed file loader